<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CocktailDetailsFragment">

    <ImageView
        android:id="@+id/cocktail_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/cocktail_image"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/main_image" />

    <ImageView
        android:id="@+id/delete_cocktail"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/material_dynamic_tertiary80" />

    <ImageView
        android:id="@+id/update_cocktail"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_cocktail"
        app:tint="@color/material_dynamic_tertiary80" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/material_dynamic_tertiary80"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.6">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    style="@style/Base.Theme.AppCompat.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Some Lemonade" />

                <TextView
                    android:id="@+id/description"
                    style="@style/Base.Theme.AppCompat.DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    tools:text="To make this..." />

                <TextView
                    android:id="@+id/ingredients"
                    style="@style/Base.Theme.AppCompat.DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    tools:text="9 asd asd" />

                <TextView
                    android:id="@+id/recipe_header"
                    style="@style/Base.Theme.AppCompat.DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/recipe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredients"
                    tools:ignore="true" />

                <TextView
                    android:id="@+id/recipe"
                    style="@style/Base.Theme.AppCompat.DefaultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipe_header"
                    tools:ignore="true"
                    tools:text="asd asd asd asd" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>